<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mm_cmd_adapter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="docker@todo.todo">docker</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>mm_msgs</depend>
  <depend>mm_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
