<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mm_controllers</name>
  <version>2.2.3</version>
  <description>Provides controllers for mobile maintainer.</description>

  <maintainer email="N2107687@e.ntu.edu.sg">Denis Stogl</maintainer>

  <license>BSD-3-Clause</license>

  <author email="N2107687@e.ntu.edu.sg">Andy Chien</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>angles</depend>
  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>mm_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>trajectory_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav2_core</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
